2010-01-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fix the small regression caused by the fix for NB#147359.

	* src/home/hd-render-manager.c
	(hd_render_manager_get_visible_client_for_tasknav): New.
	(hd_render_manager_set_state): Use
	hd_render_manager_get_visible_client_for_tasknav to select actor for
	the tasknav transition. Also show the actor because it is not shown in
	the 'slide to unlock' case.
	* src/launcher/hd-launcher.c: Remove unused member 'gsource_id'.

2010-01-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	To mitigate NB#141519 keep the application's fake window in place
	when we're rotating unless it's just started growing.  This way we
	either don't see it (if the Phone is quick to wake up) or we see
	the regular fake window rather than some jerky launcher -> fake win
	-> desktop -> Phone transition.

	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c (hd_launcher_transition_is_playing):
	  To know if the fake window is still small.
	* src/util/hd-transition.c (hd_transition_rotating_fsm):
	  ...and only then stop displaying the loading screenshot.

2010-01-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#135337 status area and tasks button overlayed on the top
		  of landscape incoming call dialog

	We restacked too early, when we were still in TASK_NAV (or LAUNCHER)
	state and decided there was no fullscreen clients thus didn't hide
	the status area and the tasks button.

	* src/home/hd-render-manager.c (hd_render_manager_set_state):
	  Do restack when we're going HOME, as this is the state we're going
	  in this situation, and that hides the status area.

2010-01-18  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#153466 - Improvement in Settigs / Profiles so that user
	scrolls down

	* src/tidy/tidy-finger-scroll.c: Modify scrolling indicator timings	
	* src/home/hd-render-manager.c
	* src/home/hd-task-navigator.c
	* src/home/hd-task-navigator.h: Call tasknav after transitions have